# jls_test

./: .gitignore  core_products.csv  db.py  locations.csv  main.py  pyproject.toml  schema.sql
static/css/: styles.css
static/js/: script.js
templates/: base.html  index.html  product.html
