[tool.poetry]
name = "jsl"
version = "0.1.0"
description = ""
authors = ["Victor Omondi <victor@slick.co.ke>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
